Refactor index.html for styling and dark mode
Refactor styles and structure for improved layout and readability. Added dark mode toggle functionality.

--- a/index.html
+++ b/index.html
@@ -42,344 +42,265 @@
   />
 
   <style>
-    /* Fonts and base */
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
       margin: 0;
-      background: linear-gradient(135deg, #f0f4ff, #e0e8ff);
-      color: #2c3e50;
-      font-size: 16px;
+      background: #f7f8fa;
+      color: #222;
+      font-size: 15px;
       line-height: 1.7;
-      transition: background 0.4s ease, color 0.4s ease;
-      min-height: 100vh;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
-    /* Header with vibrant gradient */
     header {
-      background: linear-gradient(90deg, #0066ff, #00ccff);
+      background: #0a2540;
       color: #fff;
       padding: 56px 24px;
       text-align: center;
-      box-shadow: 0 4px 12px rgba(0, 102, 255, 0.3);
-      position: relative;
-      overflow: visible;
     }
 
     header h1 {
-      margin: 0 0 12px;
-      font-size: 38px;
-      font-weight: 700;
-      letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.15);
+      margin: 0 0 8px;
+      font-size: 34px;
+      font-weight: 600;
     }
 
     header p {
       margin: 0;
-      font-size: 18px;
-      opacity: 0.85;
-      font-weight: 500;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
-    }
-
-    /* Dark Mode Toggle Button */
-    #darkToggle {
-      margin-top: 20px;
-      padding: 12px 22px;
-      border-radius: 24px;
-      border: 2px solid #ffffffcc;
-      cursor: pointer;
-      font-size: 17px;
-      background: rgba(255,255,255,0.2);
-      color: #fff;
-      font-weight: 600;
-      box-shadow: 0 4px 14px rgba(0, 204, 255, 0.4);
-      transition: all 0.3s ease;
-      user-select: none;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      filter: drop-shadow(0 0 2px rgba(0,255,255,0.7));
-    }
-
-    #darkToggle:hover, #darkToggle:focus {
-      background: #00d1ff;
-      border-color: #00eaff;
-      box-shadow: 0 6px 24px rgba(0, 229, 255, 0.7);
-      outline: none;
-      filter: drop-shadow(0 0 6px rgba(0,229,255,0.9));
-      transform: scale(1.05);
-    }
-
-    #darkToggle i {
-      font-size: 20px;
-      transition: transform 0.4s ease;
-    }
-
-    /* Animate icon on toggle */
-    body.dark #darkToggle i {
-      transform: rotate(180deg);
-      color: #ffd93b;
-      filter: drop-shadow(0 0 5px #ffd93b);
+      font-size: 16px;
+      opacity: 0.9;
     }
 
     main {
-      max-width: 1600px;
-      width: 90%;
+      max-width: 1240px;
       margin: 0 auto;
-      padding: 48px 24px 80px;
+      padding: 40px 24px;
     }
 
     section {
-      margin-bottom: 64px;
+      margin-bottom: 56px;
     }
 
     h2 {
-      font-size: 26px;
-      font-weight: 700;
-      margin-bottom: 24px;
+      font-size: 22px;
+      font-weight: 600;
+      margin-bottom: 20px;
       padding-bottom: 8px;
-      border-bottom: 3px solid #00aaff;
-      color: #004a75;
-      text-transform: uppercase;
-      letter-spacing: 1.2px;
-      transition: color 0.3s ease, border-color 0.3s ease;
+      border-bottom: 1px solid #dbe2ea;
+      color: #0a2540;
     }
 
-    /* Cards with subtle shadows and gradient backgrounds */
+    /* Fiori-like cards */
     .card {
-      background: linear-gradient(145deg, #ffffff, #e6f0ff);
-      border-radius: 20px;
-      padding: 28px 30px;
-      box-shadow: 0 6px 18px rgba(0, 102, 255, 0.15);
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      transition: all 0.25s ease;
-      cursor: default;
+      transition: all 0.2s ease;
     }
 
     .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 14px 32px rgba(0, 102, 255, 0.3);
-      background: linear-gradient(145deg, #e0f3ff, #c6e4ff);
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
     }
 
     .card h3 {
-      font-size: 20px;
-      font-weight: 700;
-      margin: 0 0 16px;
+      font-size: 18px;
+      font-weight: 600;
+      margin: 0 0 12px;
       display: flex;
       align-items: center;
-      gap: 14px;
-      color: #0066cc;
-      user-select: none;
+      gap: 10px;
+      flex-wrap: wrap;
+      color: #155d27; /* Dark green heading */
     }
 
     .card h3 i {
-      color: #007aff;
-      font-size: 24px;
-      transition: color 0.3s ease;
+      color: #155d27; /* Dark green icon */
     }
 
     .card ul {
-      padding-left: 22px;
-      margin: 0 0 14px;
-      color: #114b8b;
+      padding-left: 20px;
+      margin: 0;
     }
 
     .project-list {
-      padding-left: 22px;
-      margin: 14px 0;
-      color: #1a3c6a;
-      font-weight: 500;
+      padding-left: 18px;
+      margin: 12px 0;
     }
 
     .project-list li {
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     .project-list a {
-      color: #007aff;
+      color: #155d27;
       text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s ease;
+      font-weight: 400;
     }
 
     .project-list a:hover {
-      color: #005bb5;
       text-decoration: underline;
     }
 
     .skills-grid {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 36px;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 32px;
     }
 
-    /* Wider grid: 3 columns on large screens */
-    @media (min-width: 1400px) {
+    .badge {
+      background: #155d27;
+      color: #d4f1d4;
+      font-size: 12px;
+      padding: 4px 10px;
+      border-radius: 8px;
+      white-space: nowrap;
+      font-weight: 700;
+      box-shadow: 0 3px 12px rgba(21, 93, 39, 0.6);
+      display: inline-block;
+    }
+
+    .badge:hover {
+      background: #0f4a1d;
+      box-shadow: 0 4px 18px rgba(15, 74, 29, 0.7);
+      cursor: default;
+    }
+
+    .evidence {
+      margin-top: 12px;
+      font-size: 14px;
+      color: #155d27;
+      font-weight: 500;
+    }
+
+    .evidence a {
+      color: #155d27;
+      font-weight: 600;
+    }
+
+    footer {
+      text-align: center;
+      padding: 24px;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 24px;
+      margin-top: 16px;
+    }
+
+    .social-links a {
+      width: 56px;
+      height: 56px;
+      background: #d4f1d4;
+      border-radius: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 26px;
+      color: #155d27;
+      box-shadow: 0 6px 20px rgba(21, 93, 39, 0.35);
+      transition: all 0.2s ease;
+      text-decoration: none;
+    }
+
+    .social-links a:hover {
+      color: #0f4a1d;
+      box-shadow: 0 12px 36px rgba(15, 74, 29, 0.6);
+    }
+
+    /* Dark Mode Button */
+    #darkToggle {
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      font-weight: 600;
+      font-size: 15px;
+      padding: 10px 18px;
+      border-radius: 18px;
+      border: 2px solid #d4f1d4cc;
+      background: rgba(212, 241, 212, 0.2);
+      color: #155d27;
+      box-shadow: 0 4px 14px rgba(21, 93, 39, 0.4);
+      transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+      user-select: none;
+      margin-bottom: 32px;
+    }
+
+    #darkToggle:hover, #darkToggle:focus {
+      background: #1b6a2a;
+      border-color: #1b6a2a;
+      box-shadow: 0 6px 24px rgba(27, 106, 42, 0.7);
+      color: #e2ffe2;
+      outline: none;
+    }
+
+    /* Dark Mode Styles */
+    body.dark-mode {
+      background: #121212;
+      color: #e2e8f0;
+    }
+
+    body.dark-mode header {
+      background: #0b3b0b;
+      color: #d4f1d4;
+    }
+
+    body.dark-mode h2 {
+      border-bottom-color: #2f6f2f;
+      color: #a6d6a6;
+    }
+
+    body.dark-mode .card {
+      background: #1e2a1e;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+      color: #d4f1d4;
+    }
+
+    body.dark-mode .card h3 {
+      color: #a6d6a6;
+    }
+
+    body.dark-mode .card h3 i {
+      color: #a6d6a6;
+    }
+
+    body.dark-mode .project-list a,
+    body.dark-mode .evidence a {
+      color: #90ee90;
+    }
+
+    body.dark-mode .badge {
+      background: #1b6a2a;
+      color: #d4f1d4;
+      box-shadow: 0 4px 16px rgba(27, 106, 42, 0.7);
+    }
+
+    body.dark-mode footer {
+      color: #888;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 1200px) {
       .skills-grid {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        grid-template-columns: repeat(2, minmax(0, 1fr));
       }
     }
 
-    /* Mobile / tablet */
     @media (max-width: 900px) {
       .skills-grid {
         grid-template-columns: 1fr;
       }
     }
 
-    .badge {
-      background: #00aaff;
-      color: #fff;
-      font-size: 13px;
-      padding: 6px 14px;
-      border-radius: 12px;
-      white-space: nowrap;
-      font-weight: 700;
-      letter-spacing: 0.7px;
-      box-shadow: 0 3px 12px rgba(0,170,255,0.6);
-      transition: background 0.3s ease;
-      user-select: none;
-    }
-
-    .badge:hover {
-      background: #007acc;
-      box-shadow: 0 4px 18px rgba(0,120,204,0.7);
-    }
-
-    .evidence {
-      margin-top: 14px;
-      font-size: 15px;
-      font-weight: 600;
-      color: #007acc;
-    }
-
-    .evidence a {
-      color: #007acc;
-      font-weight: 700;
-      transition: color 0.3s ease;
-      text-decoration: none;
-    }
-
-    .evidence a:hover {
-      color: #004a7c;
-      text-decoration: underline;
-    }
-
-    footer {
-      text-align: center;
-      padding: 28px 24px;
-      font-size: 15px;
-      color: #0066cc;
-      font-weight: 600;
-      background: linear-gradient(90deg, #007aff, #00ccff);
-      box-shadow: 0 -4px 14px rgba(0, 204, 255, 0.25);
-      letter-spacing: 0.8px;
-      user-select: none;
-      transition: background 0.4s ease, color 0.4s ease;
-    }
-
-    .social-links {
-      display: flex;
-      justify-content: center;
-      gap: 28px;
-      margin-top: 22px;
-    }
-
-    .social-links a {
-      width: 60px;
-      height: 60px;
-      background: #ffffff;
-      border-radius: 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 30px;
-      color: #007aff;
-      box-shadow: 0 6px 20px rgba(0,122,255,0.35);
-      transition: all 0.3s ease;
-    }
-
-    .social-links a:hover {
-      transform: translateY(-5px) scale(1.1);
-      box-shadow: 0 12px 36px rgba(0,122,255,0.6);
-      color: #005bb5;
-    }
-
-    /* Learning Platforms spacing */
-    .learning-platforms {
-      margin-top: 16px;
-    }
-
-    .learning-platforms .card {
-      padding: 30px;
-    }
-
-    .learning-platforms ul li {
-      margin-bottom: 10px;
-    }
-
-    /* Dark mode styles */
-    body.dark {
-      background: linear-gradient(135deg, #1a1f36, #0a0e1a);
-      color: #cbd5e1;
-    }
-
-    body.dark header {
-      background: linear-gradient(90deg, #0a2342, #004f80);
-      box-shadow: 0 4px 12px rgba(0, 100, 255, 0.7);
-    }
-
-    body.dark h2 {
-      color: #60a5fa;
-      border-color: #2563eb;
-    }
-
-    body.dark .card {
-      background: linear-gradient(145deg, #121829, #1e2a4d);
-      box-shadow: 0 10px 28px rgba(0, 102, 255, 0.8);
-    }
-
-    body.dark .badge {
-      background: #2563eb;
-      color: #dbeafe;
-      box-shadow: 0 4px 16px rgba(37, 99, 235, 0.9);
-    }
-
-    body.dark a {
-      color: #93c5fd;
-    }
-
-    body.dark footer {
-      color: #93c5fd;
-      background: linear-gradient(90deg, #2563eb, #3b82f6);
-      box-shadow: 0 -6px 20px rgba(59, 130, 246, 0.4);
-    }
-
-    body.dark .card h3 i {
-      color: #60a5fa;
-    }
-
-    body.dark .project-list a {
-      color: #60a5fa;
-    }
-
-    body.dark .evidence a {
-      color: #60a5fa;
-    }
-
-    body.dark .social-links a {
-      background: #1e40af;
-      color: #93c5fd;
-      box-shadow: 0 8px 28px rgba(37, 99, 235, 0.7);
-    }
-
-    body.dark .social-links a:hover {
-      color: #bfdbfe;
-      box-shadow: 0 12px 36px rgba(37, 99, 235, 0.9);
-    }
   </style>
 </head>
 
@@ -388,12 +309,15 @@
 <header>
   <h1>Narish Shairah Cataquiz</h1>
   <p>SAP Consultant | Analytics & Business Intelligence</p>
-  <button id="darkToggle" aria-label="Toggle dark mode" title="Toggle dark mode">
-    <i class="fa-solid fa-moon"></i> Dark Mode
-  </button>
 </header>
 
 <main>
+
+<section>
+  <button id="darkToggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
+    <i class="fa-solid fa-moon"></i> Dark Mode
+  </button>
+</section>
 
 <section>
   <h2>About Me</h2>
@@ -470,7 +394,7 @@
   </div>
 </section>
 
-<section class="learning-platforms">
+<section>
   <h2>Learning Platforms</h2>
 
   <div class="skills-grid">
@@ -515,4 +439,91 @@
         <li>Analytics, reporting & visualization concepts</li>
         <li>Supplementary technical upskilling</li>
       </ul>
-     
+      <p class="evidence">
+        Practical, topic-focused learning to complement SAP projects
+      </p>
+    </div>
+
+  </div>
+</section>
+  
+<section>
+  <h2>Skills</h2>
+
+  <div class="skills-grid">
+
+    <div class="card">
+      <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
+      <ul>
+        <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
+        <li>Extraction (SAP S/4HANA, SAP ECC)</li>
+        <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
+        <li>Data validation & reconciliation</li>
+        <li>Planning and simulation</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h3><i class="fa-solid fa-database"></i> Data Management</h3>
+      <ul>
+        <li>ETL processes & data mapping</li>
+        <li>Roles & authorizations</li>
+        <li>SQL aggregates & window functions</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Support</h3>
+      <ul>
+        <li>Monitoring & troubleshooting</li>
+        <li>End-user analysis & support</li>
+        <li>Documentation improvement</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
+      <ul>
+        <li>JIRA</li>
+        <li>ServiceNow</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
+<section>
+  <h2>Connect with Me</h2>
+
+  <div class="social-links" style="justify-content: center;">
+    <a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank" aria-label="LinkedIn">
+      <i class="fa-brands fa-linkedin"></i>
+    </a>
+    <a href="https://github.com/narishairah/" target="_blank" aria-label="GitHub">
+      <i class="fa-brands fa-github"></i>
+    </a>
+  </div>
+
+</section>
+
+</main>
+
+<footer>
+  © 2025 Narish · Built as a hands-on learning portfolio
+</footer>
+
+<script>
+  const toggleBtn = document.getElementById('darkToggle');
+  toggleBtn.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    // Optionally update button text/icon
+    if(document.body.classList.contains('dark-mode')) {
+      toggleBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
+    } else {
+      toggleBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
+    }
+  });
+</script>
+
+</body>
+</html>
