--- a/index.html
+++ b/index.html
@@ -42,19 +42,28 @@
   />
 
   <style>
+    /* Colors */
+    :root {
+      --dark-green: #1A2421;    /* Dark green for text */
+      --teal-blue: #15976F;     /* Teal blue for backgrounds & accents */
+      --teal-light: #2ba57d;    /* Slightly lighter teal for cards */
+      --teal-lighter: #4dc399;  /* Even lighter teal for hover etc */
+      --dark-green-light: #2f433f; /* Slightly lighter dark green */
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
       margin: 0;
-      background: #f7f8fa;
-      color: #222;
+      background: var(--teal-blue);
+      color: var(--dark-green);
       font-size: 15px;
       line-height: 1.7;
       transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     header {
-      background: #1A2421; /* Dark Jungle Green */
-      color: #fff;
+      background: var(--dark-green);
+      color: var(--teal-blue);
       padding: 56px 24px;
       text-align: center;
     }
@@ -69,6 +78,7 @@
       margin: 0;
       font-size: 16px;
       opacity: 0.9;
+      color: var(--teal-blue);
     }
 
     main {
@@ -86,25 +96,27 @@
       font-weight: 600;
       margin-bottom: 20px;
       padding-bottom: 8px;
-      border-bottom: 1px solid #dbe2ea;
-      color: #1A2421; /* Dark Jungle Green */
+      border-bottom: 1px solid var(--teal-light);
+      color: var(--dark-green);
     }
 
-    /* Fiori-like cards */
+    /* Cards */
     .card {
-      background: #ffffff;
+      background: var(--teal-light);
       border-radius: 16px;
       padding: 24px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+      box-shadow: 0 4px 12px rgba(21, 151, 111, 0.3);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       transition: all 0.2s ease;
+      color: var(--dark-green);
     }
 
     .card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      background: var(--teal-lighter);
+      box-shadow: 0 8px 20px rgba(21, 151, 111, 0.5);
+      cursor: pointer;
     }
 
     .card h3 {
@@ -115,11 +127,11 @@
       align-items: center;
       gap: 10px;
       flex-wrap: wrap;
-      color: #15976F; /* Accent green */
+      color: var(--dark-green);
     }
 
     .card h3 i {
-      color: #15976F; /* Accent green */
+      color: var(--dark-green);
     }
 
     .card ul {
@@ -137,13 +149,14 @@
     }
 
     .project-list a {
-      color: #15976F; /* Accent green */
-      text-decoration: none;
-      font-weight: 400;
+      color: var(--dark-green);
+      text-decoration: underline;
+      font-weight: 600;
+      transition: color 0.3s ease;
     }
 
     .project-list a:hover {
-      text-decoration: underline;
+      color: var(--teal-blue);
     }
 
     .skills-grid {
@@ -153,40 +166,49 @@
     }
 
     .badge {
-      background: #15976F; /* Accent green */
-      color: #d4f1d4;
+      background: var(--dark-green);
+      color: var(--teal-blue);
       font-size: 12px;
       padding: 4px 10px;
       border-radius: 8px;
       white-space: nowrap;
       font-weight: 700;
-      box-shadow: 0 3px 12px rgba(21, 151, 111, 0.6);
+      box-shadow: 0 3px 12px rgba(26, 36, 33, 0.6);
       display: inline-block;
+      transition: background-color 0.3s ease;
     }
 
     .badge:hover {
-      background: #117755; /* Darker accent green */
-      box-shadow: 0 4px 18px rgba(17, 119, 85, 0.7);
+      background: var(--dark-green-light);
+      box-shadow: 0 4px 18px rgba(47, 67, 63, 0.7);
       cursor: default;
     }
 
     .evidence {
       margin-top: 12px;
       font-size: 14px;
-      color: #15976F; /* Accent green */
+      color: var(--dark-green);
       font-weight: 500;
     }
 
     .evidence a {
-      color: #15976F; /* Accent green */
+      color: var(--dark-green);
       font-weight: 600;
+      text-decoration: underline;
+      transition: color 0.3s ease;
+    }
+
+    .evidence a:hover {
+      color: var(--teal-blue);
     }
 
     footer {
       text-align: center;
       padding: 24px;
       font-size: 14px;
-      color: #555;
+      color: var(--dark-green-light);
+      background: var(--teal-light);
+      border-top: 1px solid var(--dark-green-light);
     }
 
     .social-links {
@@ -199,21 +221,21 @@
     .social-links a {
       width: 56px;
       height: 56px;
-      background: #d4f1d4;
+      background: var(--dark-green);
       border-radius: 14px;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 26px;
-      color: #15976F; /* Accent green */
-      box-shadow: 0 6px 20px rgba(21, 151, 111, 0.35);
+      color: var(--teal-blue);
+      box-shadow: 0 6px 20px rgba(26, 36, 33, 0.6);
       transition: all 0.2s ease;
       text-decoration: none;
     }
 
     .social-links a:hover {
-      color: #117755;
-      box-shadow: 0 12px 36px rgba(17, 119, 85, 0.6);
+      color: var(--dark-green-light);
+      box-shadow: 0 12px 36px rgba(47, 67, 63, 0.8);
     }
 
     /* Dark Mode Button */
@@ -226,20 +248,20 @@
       font-size: 15px;
       padding: 10px 18px;
       border-radius: 18px;
-      border: 2px solid #d4f1d4cc;
-      background: rgba(212, 241, 212, 0.2);
-      color: #15976F;
-      box-shadow: 0 4px 14px rgba(21, 151, 111, 0.4);
+      border: 2px solid var(--dark-green-light);
+      background: var(--dark-green-light);
+      color: var(--teal-blue);
+      box-shadow: 0 4px 14px rgba(47, 67, 63, 0.5);
       transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
       margin-bottom: 32px;
     }
 
     #darkToggle:hover, #darkToggle:focus {
-      background: #117755;
-      border-color: #117755;
-      box-shadow: 0 6px 24px rgba(17, 119, 85, 0.7);
-      color: #e2ffe2;
+      background: var(--dark-green);
+      border-color: var(--dark-green);
+      box-shadow: 0 6px 24px rgba(26, 36, 33, 0.7);
+      color: var(--teal-blue);
       outline: none;
     }
 
@@ -247,51 +269,6 @@
     .dark-mode-toggle-container {
       text-align: center;
       margin-bottom: 32px;
-    }
-
-    /* Dark Mode Styles */
-    body.dark-mode {
-      background: #1A2421; /* Dark Jungle Green */
-      color: #d4f1d4;
-    }
-
-    body.dark-mode header {
-      background: #15976F; /* Accent green */
-      color: #d4f1d4;
-    }
-
-    body.dark-mode h2 {
-      border-bottom-color: #15976F;
-      color: #d4f1d4;
-    }
-
-    body.dark-mode .card {
-      background: #121f1a;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.6);
-      color: #d4f1d4;
-    }
-
-    body.dark-mode .card h3 {
-      color: #d4f1d4;
-    }
-
-    body.dark-mode .card h3 i {
-      color: #d4f1d4;
-    }
-
-    body.dark-mode .project-list a,
-    body.dark-mode .evidence a {
-      color: #a8e6c1;
-    }
-
-    body.dark-mode .badge {
-      background: #15976F;
-      color: #d4f1d4;
-      box-shadow: 0 4px 16px rgba(21, 151, 111, 0.7);
-    }
-
-    body.dark-mode footer {
-      color: #a0b8a7;
     }
 
     /* Responsive adjustments */
@@ -520,14 +497,24 @@
 <script>
   const toggleBtn = document.getElementById('darkToggle');
   toggleBtn.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-    if(document.body.classList.contains('dark-mode')) {
+    // Toggle between teal blue and dark green backgrounds & colors
+    if(document.body.style.backgroundColor === 'rgb(21, 151, 111)') { // currently teal
+      document.body.style.backgroundColor = 'var(--dark-green)';
+      document.body.style.color = 'var(--teal-blue)';
+      document.querySelector('header').style.backgroundColor = 'var(--teal-blue)';
+      document.querySelector('header').style.color = 'var(--dark-green)';
+    } else {
+      document.body.style.backgroundColor = 'var(--teal-blue)';
+      document.body.style.color = 'var(--dark-green)';
+      document.querySelector('header').style.backgroundColor = 'var(--dark-green)';
+      document.querySelector('header').style.color = 'var(--teal-blue)';
+    }
+
+    // Toggle button text/icon
+    if(toggleBtn.innerHTML.includes('moon')) {
       toggleBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
     } else {
       toggleBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
     }
   });
-</script>
-
-</body>
-</html>
+</script
