--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
   <style>
     /* Colors */
     :root {
-      --dark-green: #1A2421;    /* Dark green for text */
-      --teal-blue: #15976F;     /* Teal blue for backgrounds & accents */
-      --teal-light: #2ba57d;    /* Slightly lighter teal for cards */
-      --teal-lighter: #4dc399;  /* Even lighter teal for hover etc */
-      --dark-green-light: #2f433f; /* Slightly lighter dark green */
+      --dark-green: #1A2421;    /* Dark green for text and accents */
+      --mint-green: #B9E3C6;    /* Mint green background (soft pastel green) */
+      --mint-green-light: #D6F0DE; /* Lighter mint for hover etc */
+      --dark-green-light: #2F433F; /* Slightly lighter dark green */
+      --mint-dark: #8FC99B;     /* Darker mint for badges */
     }
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
       margin: 0;
-      background: var(--teal-blue);
+      background: var(--mint-green);
       color: var(--dark-green);
       font-size: 15px;
       line-height: 1.7;
@@ -63,7 +63,7 @@
 
     header {
       background: var(--dark-green);
-      color: var(--teal-blue);
+      color: var(--mint-green);
       padding: 56px 24px;
       text-align: center;
     }
@@ -78,7 +78,7 @@
       margin: 0;
       font-size: 16px;
       opacity: 0.9;
-      color: var(--teal-blue);
+      color: var(--mint-green);
     }
 
     main {
@@ -96,16 +96,16 @@
       font-weight: 600;
       margin-bottom: 20px;
       padding-bottom: 8px;
-      border-bottom: 1px solid var(--teal-light);
+      border-bottom: 1px solid var(--mint-dark);
       color: var(--dark-green);
     }
 
     /* Cards */
     .card {
-      background: var(--teal-light);
+      background: var(--mint-green-light);
       border-radius: 16px;
       padding: 24px;
-      box-shadow: 0 4px 12px rgba(21, 151, 111, 0.3);
+      box-shadow: 0 4px 12px rgba(31, 119, 68, 0.2);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -114,8 +114,8 @@
     }
 
     .card:hover {
-      background: var(--teal-lighter);
-      box-shadow: 0 8px 20px rgba(21, 151, 111, 0.5);
+      background: var(--mint-green);
+      box-shadow: 0 8px 20px rgba(31, 119, 68, 0.35);
       cursor: pointer;
     }
 
@@ -156,7 +156,7 @@
     }
 
     .project-list a:hover {
-      color: var(--teal-blue);
+      color: var(--mint-dark);
     }
 
     .skills-grid {
@@ -166,14 +166,14 @@
     }
 
     .badge {
-      background: var(--dark-green);
-      color: var(--teal-blue);
+      background: var(--mint-dark);
+      color: var(--mint-green-light);
       font-size: 12px;
       padding: 4px 10px;
       border-radius: 8px;
       white-space: nowrap;
       font-weight: 700;
-      box-shadow: 0 3px 12px rgba(26, 36, 33, 0.6);
+      box-shadow: 0 3px 12px rgba(143, 201, 155, 0.6);
       display: inline-block;
       transition: background-color 0.3s ease;
     }
@@ -199,7 +199,7 @@
     }
 
     .evidence a:hover {
-      color: var(--teal-blue);
+      color: var(--mint-dark);
     }
 
     footer {
@@ -207,7 +207,7 @@
       padding: 24px;
       font-size: 14px;
       color: var(--dark-green-light);
-      background: var(--teal-light);
+      background: var(--mint-green-light);
       border-top: 1px solid var(--dark-green-light);
     }
 
@@ -227,7 +227,7 @@
       align-items: center;
       justify-content: center;
       font-size: 26px;
-      color: var(--teal-blue);
+      color: var(--mint-green);
       box-shadow: 0 6px 20px rgba(26, 36, 33, 0.6);
       transition: all 0.2s ease;
       text-decoration: none;
@@ -250,7 +250,7 @@
       border-radius: 18px;
       border: 2px solid var(--dark-green-light);
       background: var(--dark-green-light);
-      color: var(--teal-blue);
+      color: var(--mint-green);
       box-shadow: 0 4px 14px rgba(47, 67, 63, 0.5);
       transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
@@ -261,7 +261,7 @@
       background: var(--dark-green);
       border-color: var(--dark-green);
       box-shadow: 0 6px 24px rgba(26, 36, 33, 0.7);
-      color: var(--teal-blue);
+      color: var(--mint-green);
       outline: none;
     }
 
@@ -497,24 +497,14 @@
 <script>
   const toggleBtn = document.getElementById('darkToggle');
   toggleBtn.addEventListener('click', () => {
-    // Toggle between teal blue and dark green backgrounds & colors
-    if(document.body.style.backgroundColor === 'rgb(21, 151, 111)') { // currently teal
-      document.body.style.backgroundColor = 'var(--dark-green)';
-      document.body.style.color = 'var(--teal-blue)';
-      document.querySelector('header').style.backgroundColor = 'var(--teal-blue)';
-      document.querySelector('header').style.color = 'var(--dark-green)';
-    } else {
-      document.body.style.backgroundColor = 'var(--teal-blue)';
-      document.body.style.color = 'var(--dark-green)';
-      document.querySelector('header').style.backgroundColor = 'var(--dark-green)';
-      document.querySelector('header').style.color = 'var(--teal-blue)';
-    }
-
-    // Toggle button text/icon
-    if(toggleBtn.innerHTML.includes('moon')) {
+    document.body.classList.toggle('dark-mode');
+    if(document.body.classList.contains('dark-mode')) {
       toggleBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
     } else {
       toggleBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
     }
   });
-</script
+</script>
+
+</body>
+</html>
