--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google Search Console verification -->
   <meta name="google-site-verification" content="XBeddUuPoPGDLv3tKBMD5p4bvAuCUgSP-RJGhvkhRTs" />
-  
+
   <title>Narish Shairah Cataquiz | SAP Consultant & Analytics Portfolio</title>
 
   <!-- SEO Meta -->
-  <meta name="description" content="Narish Shairah Cataquiz – SAP Consultant specializing in SAP BW, Analytics, Business Intelligence, and hands-on SAP learning portfolio.">
-  <meta name="author" content="Narish Shairah Cataquiz">
-  <meta name="keywords" content="Narish Shairah Cataquiz, SAP Consultant, SAP BW, SAP Analytics, SAP Business Intelligence, SAP PaPM">
+  <meta name="description" content="Narish Shairah Cataquiz – SAP Consultant specializing in SAP BW, Analytics, Business Intelligence, and hands-on SAP learning portfolio." />
+  <meta name="author" content="Narish Shairah Cataquiz" />
+  <meta name="keywords" content="Narish Shairah Cataquiz, SAP Consultant, SAP BW, SAP Analytics, SAP Business Intelligence, SAP PaPM" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Narish Shairah Cataquiz | SAP Consultant Portfolio">
-  <meta property="og:description" content="SAP Consultant focused on Analytics, Business Intelligence, SAP BW, PaPM, and hands-on SAP projects.">
-  <meta property="og:url" content="https://narishairah.github.io/">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Narish Shairah Cataquiz | SAP Consultant Portfolio" />
+  <meta property="og:description" content="SAP Consultant focused on Analytics, Business Intelligence, SAP BW, PaPM, and hands-on SAP projects." />
+  <meta property="og:url" content="https://narishairah.github.io/" />
+  <meta property="og:type" content="website" />
 
   <!-- Person Schema -->
   <script type="application/ld+json">
@@ -44,13 +44,14 @@
   <style>
     /* Colors */
     :root {
-      --dark-green: #1A2421;    /* Dark green for text and accents */
-      --mint-green: #B9E3C6;    /* Mint green background (soft pastel green) */
-      --mint-green-light: #D6F0DE; /* Lighter mint for hover etc */
-      --dark-green-light: #2F433F; /* Slightly lighter dark green */
-      --mint-dark: #8FC99B;     /* Darker mint for badges */
+      --dark-green: #1A2421;
+      --mint-green: #B9E3C6;
+      --mint-green-light: #D6F0DE;
+      --dark-green-light: #2F433F;
+      --mint-dark: #8FC99B;
     }
 
+    /* Light Mode (Default) */
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
       margin: 0;
@@ -238,7 +239,7 @@
       box-shadow: 0 12px 36px rgba(47, 67, 63, 0.8);
     }
 
-    /* Dark Mode Button */
+    /* Dark Mode Button styling (matches your screenshot) */
     #darkToggle {
       cursor: pointer;
       display: inline-flex;
@@ -248,20 +249,20 @@
       font-size: 15px;
       padding: 10px 18px;
       border-radius: 18px;
-      border: 2px solid var(--dark-green-light);
-      background: var(--dark-green-light);
-      color: var(--mint-green);
-      box-shadow: 0 4px 14px rgba(47, 67, 63, 0.5);
+      border: none;
+      background: #2d6237; /* dark green */
+      color: white;
+      box-shadow: 0 6px 16px rgba(45, 98, 55, 0.6);
       transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
       user-select: none;
       margin-bottom: 32px;
     }
 
-    #darkToggle:hover, #darkToggle:focus {
-      background: var(--dark-green);
-      border-color: var(--dark-green);
-      box-shadow: 0 6px 24px rgba(26, 36, 33, 0.7);
-      color: var(--mint-green);
+    #darkToggle:hover,
+    #darkToggle:focus {
+      background: #1a3a1a; /* darker green */
+      box-shadow: 0 8px 24px rgba(26, 58, 26, 0.8);
+      color: white;
       outline: none;
     }
 
@@ -284,70 +285,77 @@
       }
     }
 
-    /* ========== DARK MODE STYLES ========== */
-
+    /* === DARK MODE STYLES === */
     body.dark-mode {
-      background: var(--dark-green);
-      color: var(--mint-green-light);
+      background: #000;
+      color: #fff;
     }
 
-    body.dark-mode header {
-      background: var(--mint-dark);
-      color: var(--mint-green-light);
+    /* Text color for main sections in dark mode */
+    body.dark-mode section,
+    body.dark-mode h2,
+    body.dark-mode p,
+    body.dark-mode li,
+    body.dark-mode .evidence {
+      color: #fff;
     }
 
-    body.dark-mode h2 {
-      border-color: var(--mint-green-light);
-      color: var(--mint-green-light);
-    }
-
+    /* Cards in dark mode default background and text */
     body.dark-mode .card {
-      background: var(--dark-green-light);
-      color: var(--mint-green-light);
-      box-shadow: 0 4px 12px rgba(185, 227, 198, 0.2);
+      background: #222;
+      color: #fff;
       transition: background-color 0.3s ease, color 0.3s ease;
+      box-shadow: 0 4px 12px rgba(143, 201, 155, 0.3);
     }
 
+    /* Cards hover effect in dark mode: mint green background with dark text */
     body.dark-mode .card:hover {
-      background: var(--mint-dark);
-      box-shadow: 0 8px 20px rgba(185, 227, 198, 0.6);
+      background: var(--mint-green);
+      color: var(--dark-green);
+      box-shadow: 0 8px 20px rgba(185, 227, 198, 0.7);
       cursor: pointer;
     }
 
-    body.dark-mode .card h3,
-    body.dark-mode .card h3 i,
+    /* Links color in dark mode */
     body.dark-mode .project-list a,
     body.dark-mode .evidence a {
-      color: var(--mint-green-light);
+      color: #fff;
+      transition: color 0.3s ease;
     }
 
     body.dark-mode .project-list a:hover,
     body.dark-mode .evidence a:hover {
-      color: var(--dark-green-light);
+      color: var(--dark-green);
     }
 
+    /* Badge colors for dark mode */
     body.dark-mode .badge {
       background: var(--mint-green-light);
       color: var(--dark-green);
-      box-shadow: 0 3px 12px rgba(214, 240, 222, 0.8);
+      box-shadow: 0 3px 12px rgba(214, 240, 222, 0.9);
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     body.dark-mode .badge:hover {
-      background: var(--mint-green);
-      box-shadow: 0 4px 18px rgba(214, 240, 222, 1);
+      background: var(--dark-green);
+      box-shadow: 0 4px 18px rgba(47, 67, 63, 0.9);
+      color: var(--mint-green-light);
       cursor: default;
     }
 
+    /* Footer dark mode */
     body.dark-mode footer {
       background: var(--dark-green-light);
       color: var(--mint-green-light);
-      border-top: 1px solid var(--mint-green-light);
+      border-top: 1px solid var(--mint-dark);
     }
 
+    /* Social links dark mode */
     body.dark-mode .social-links a {
       background: var(--mint-green-light);
       color: var(--dark-green);
       box-shadow: 0 6px 20px rgba(214, 240, 222, 0.7);
+      transition: all 0.3s ease;
     }
 
     body.dark-mode .social-links a:hover {
@@ -355,190 +363,236 @@
       box-shadow: 0 12px 36px rgba(143, 201, 155, 0.9);
     }
 
+    /* Toggle button in dark mode - keep consistent */
     body.dark-mode #darkToggle {
-      background: var(--mint-green-light);
-      color: var(--dark-green);
-      border: 2px solid var(--mint-dark);
-      box-shadow: 0 4px 14px rgba(214, 240, 222, 0.8);
+      background: #2d6237; /* same dark green */
+      color: white;
+      box-shadow: 0 6px 16px rgba(45, 98, 55, 0.6);
     }
 
     body.dark-mode #darkToggle:hover,
     body.dark-mode #darkToggle:focus {
-      background: var(--mint-dark);
-      border-color: var(--mint-dark);
-      box-shadow: 0 6px 24px rgba(143, 201, 155, 0.9);
-      color: var(--mint-green-light);
-      outline: none;
+      background: #1a3a1a;
+      box-shadow: 0 8px 24px rgba(26, 58, 26, 0.8);
+      color: white;
     }
   </style>
 </head>
 
 <body>
 
-<header>
-  <h1>Narish Shairah Cataquiz</h1>
-  <p>SAP Consultant | Analytics & Business Intelligence</p>
-</header>
+  <header>
+    <h1>Narish Shairah Cataquiz</h1>
+    <p>SAP Consultant | Analytics & Business Intelligence</p>
+  </header>
 
-<main>
+  <main>
+    <section class="dark-mode-toggle-container">
+      <button id="darkToggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
+        <i class="fa-solid fa-moon"></i> Dark Mode
+      </button>
+    </section>
 
-<section class="dark-mode-toggle-container">
-  <button id="darkToggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
-    <i class="fa-solid fa-moon"></i> Dark Mode
-  </button>
-</section>
-
-<section>
-  <h2>About Me</h2>
-  <p>
-    With a background in <strong>SAP Business Warehouse (BW)</strong>,
-    <strong>SAP Business Objects (BOBJ)</strong>, and
-    <strong>SAP Profitability and Performance Management (PaPM)</strong>,
-    I continuously strengthen my skills through hands-on learning and real-world business scenarios.
-  </p>
-  <p>
-    My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> further developed my
-    interest in planning and simulation scenarios, emphasizing data modeling,
-    semantic layers, and analytics-ready design.
-  </p>
-</section>
-
-<section>
-  <h2>CURRENT FOCUS</h2>
-  <p>
-    <em>SAP PaPM, SAP BW on HANA</em>
-  </p>
-</section>
-
-<section>
-  <h2>UPSKILLING 2026</h2>
-
-  <div class="skills-grid">
-
-    <div class="card">
-      <h3>
-        <i class="fa-solid fa-cloud"></i>
-        SAP Datasphere
-        <span class="badge">In Progress</span>
-      </h3>
-      <ul class="project-list">
-        <li>
-          <a href="#" target="_blank">
-            DA180 - <em>Explore SAP Datasphere and SAP Analytics Cloud End-to-End</em>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Customer & Product Master Data Modeling</a>
-        </li>
-        <li>
-          <a href="#" target="_blank">Data Integration & Transformation using SAP sample datasets</a>
-        </li>
-      </ul>
-      <p class="evidence">
-        <a href="#" target="_blank">📄 Documentation</a> ·
-        <a href="#" target="_blank">📁 GitHub</a>
+    <section>
+      <h2>About Me</h2>
+      <p>
+        With a background in <strong>SAP Business Warehouse (BW)</strong>,
+        <strong>SAP Business Objects (BOBJ)</strong>, and
+        <strong>SAP Profitability and Performance Management (PaPM)</strong>,
+        I continuously strengthen my skills through hands-on learning and real-world business scenarios.
       </p>
-    </div>
-
-    <div class="card">
-      <h3>
-        <i class="fa-solid fa-chart-pie"></i>
-        SAP Analytics Cloud (SAC)
-        <span class="badge">In Progress</span>
-      </h3>
-      <ul class="project-list">
-        <li><a href="#" target="_blank">Interactive Story for Sales & Margin Analysis</a></li>
-        <li>
-          <a href="#" target="_blank">
-            Basic Planning Model – <i>Version management & data entry</i>
-          </a>
-        </li>
-        <li><a href="#" target="_blank">Live Connection Dashboard using SAP BW / Datasphere</a></li>
-      </ul>
-      <p class="evidence">
-        <a href="#" target="_blank">📄 Notes</a>
+      <p>
+        My experience with <strong>SAP BW-Integrated Planning (BW-IP)</strong> further developed my
+        interest in planning and simulation scenarios, emphasizing data modeling,
+        semantic layers, and analytics-ready design.
       </p>
-    </div>
+    </section>
 
-  </div>
-</section>
+    <section>
+      <h2>CURRENT FOCUS</h2>
+      <p><em>SAP PaPM, SAP BW on HANA</em></p>
+    </section>
 
-<section>
-  <h2>Learning Platforms</h2>
+    <section>
+      <h2>UPSKILLING 2026</h2>
 
-  <div class="skills-grid">
+      <div class="skills-grid">
 
-    <div class="card">
-      <h3>
-        <i class="fa-solid fa-graduation-cap"></i>
-        SAP Learning Hub & Learning Journeys
-      </h3>
-      <ul>
-        <li>SAP PaPM Learning Journey (Configuration & Modeling)</li>
-        <li>SAP BW on HANA & BW-IP fundamentals</li>
-        <li>SAP Datasphere & SAC guided learning paths</li>
-      </ul>
-      <p class="evidence">
-        Structured, role-based SAP learning aligned with real project scenarios
-      </p>
-    </div>
+        <div class="card">
+          <h3>
+            <i class="fa-solid fa-cloud"></i>
+            SAP Datasphere
+            <span class="badge">In Progress</span>
+          </h3>
+          <ul class="project-list">
+            <li>
+              <a href="#" target="_blank">
+                DA180 - <em>Explore SAP Datasphere and SAP Analytics Cloud End-to-End</em>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">Customer & Product Master Data Modeling</a>
+            </li>
+            <li>
+              <a href="#" target="_blank">Data Integration & Transformation using SAP sample datasets</a>
+            </li>
+          </ul>
+          <p class="evidence">
+            <a href="#" target="_blank">📄 Documentation</a> ·
+            <a href="#" target="_blank">📁 GitHub</a>
+          </p>
+        </div>
 
-    <div class="card">
-      <h3>
-        <i class="fa-solid fa-chart-simple"></i>
-        DataCamp
-      </h3>
-      <ul>
-        <li>SQL for Data Analysis</li>
-        <li>Data Modeling & Analytics fundamentals</li>
-        <li>Python & AI concepts for analytics work</li>
-      </ul>
-      <p class="evidence">
-        Hands-on exercises reinforcing analytical thinking and data foundations
-      </p>
-    </div>
+        <div class="card">
+          <h3>
+            <i class="fa-solid fa-chart-pie"></i>
+            SAP Analytics Cloud (SAC)
+            <span class="badge">In Progress</span>
+          </h3>
+          <ul class="project-list">
+            <li><a href="#" target="_blank">Interactive Story for Sales & Margin Analysis</a></li>
+            <li>
+              <a href="#" target="_blank">
+                Basic Planning Model – <i>Version management & data entry</i>
+              </a>
+            </li>
+            <li><a href="#" target="_blank">Live Connection Dashboard using SAP BW / Datasphere</a></li>
+          </ul>
+          <p class="evidence">
+            <a href="#" target="_blank">📄 Notes</a>
+          </p>
+        </div>
 
-    <div class="card">
-      <h3>
-        <i class="fa-solid fa-video"></i>
-        Udemy
-      </h3>
-      <ul>
-        <li>SAP BW / HANA deep dives</li>
-        <li>Analytics, reporting & visualization concepts</li>
-        <li>Supplementary technical upskilling</li>
-      </ul>
-      <p class="evidence">
-        Practical, topic-focused learning to complement SAP projects
-      </p>
-    </div>
+      </div>
+    </section>
 
-  </div>
-</section>
-  
-<section>
-  <h2>Skills</h2>
+    <section>
+      <h2>Learning Platforms</h2>
 
-  <div class="skills-grid">
+      <div class="skills-grid">
 
-    <div class="card">
-      <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
-      <ul>
-        <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
-        <li>Extraction (SAP S/4HANA, SAP ECC)</li>
-        <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
-        <li>Data validation & reconciliation</li>
-        <li>Planning and simulation</li>
-      </ul>
-    </div>
+        <div class="card">
+          <h3>
+            <i class="fa-solid fa-graduation-cap"></i>
+            SAP Learning Hub & Learning Journeys
+          </h3>
+          <ul>
+            <li>SAP PaPM Learning Journey (Configuration & Modeling)</li>
+            <li>SAP BW on HANA & BW-IP fundamentals</li>
+            <li>SAP Datasphere & SAC guided learning paths</li>
+          </ul>
+          <p class="evidence">
+            Structured, role-based SAP learning aligned with real project scenarios
+          </p>
+        </div>
 
-    <div class="card">
-      <h3><i class="fa-solid fa-database"></i> Data Management</h3>
-      <ul>
-        <li>ETL processes & data mapping</li>
-        <li>Roles & authorizations</li>
-        <li>SQL aggregates & window functions</li>
-      </ul>
-    </div>
+        <div class="card">
+          <h3>
+            <i class="fa-solid fa-chart-simple"></i>
+            DataCamp
+          </h3>
+          <ul>
+            <li>SQL for Data Analysis</li>
+            <li>Data Modeling & Analytics fundamentals</li>
+            <li>Python & AI concepts for analytics work</li>
+          </ul>
+          <p class="evidence">
+            Hands-on exercises reinforcing analytical thinking and data foundations
+          </p>
+        </div>
 
-   
+        <div class="card">
+          <h3>
+            <i class="fa-solid fa-video"></i>
+            Udemy
+          </h3>
+          <ul>
+            <li>SAP BW / HANA deep dives</li>
+            <li>Analytics, reporting & visualization concepts</li>
+            <li>Supplementary technical upskilling</li>
+          </ul>
+          <p class="evidence">
+            Practical, topic-focused learning to complement SAP projects
+          </p>
+        </div>
+
+      </div>
+    </section>
+
+    <section>
+      <h2>Skills</h2>
+
+      <div class="skills-grid">
+
+        <div class="card">
+          <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
+          <ul>
+            <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
+            <li>Extraction (SAP S/4HANA, SAP ECC)</li>
+            <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
+            <li>Data validation & reconciliation</li>
+            <li>Planning and simulation</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3><i class="fa-solid fa-database"></i> Data Management</h3>
+          <ul>
+            <li>ETL processes & data mapping</li>
+            <li>Roles & authorizations</li>
+            <li>SQL aggregates & window functions</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Support</h3>
+          <ul>
+            <li>Monitoring & troubleshooting</li>
+            <li>End-user analysis & support</li>
+            <li>Documentation improvement</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
+          <ul>
+            <li>JIRA</li>
+            <li>ServiceNow</li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+
+    <section>
+      <h2>Connect with Me</h2>
+
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank" aria-label="LinkedIn">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/narishairah/" target="_blank" aria-label="GitHub">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Narish · Built as a hands-on learning portfolio
+  </footer>
+
+  <script>
+    const toggleBtn = document.getElementById('darkToggle');
+    toggleBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      if (document.body.classList.contains('dark-mode')) {
+        toggleBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
+      } else {
+        toggleBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
+      }
+    });
+  </script>
+
+</body>
+</html>
