--- a/index.html
+++ b/index.html
@@ -110,18 +110,19 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      transition: all 0.2s ease;
+      transition: all 0.3s ease;
       color: var(--dark-green);
     }
 
-    /* UPDATED: Light Mode Hover */
+    /* Light Mode Hover */
     .card:hover {
       background: var(--dark-green);  /* Dark green background on hover */
       color: white;                   /* White text for readability */
-      box-shadow: 0 8px 20px rgba(26, 58, 26, 0.7); /* Dark green shadow */
+      box-shadow: 0 8px 24px rgba(26, 58, 26, 0.8); /* stronger shadow on hover */
       cursor: pointer;
     }
 
+    /* Project / card title */
     .card h3 {
       font-size: 18px;
       font-weight: 600;
@@ -131,15 +132,38 @@
       gap: 10px;
       flex-wrap: wrap;
       color: var(--dark-green);
+      transition: color 0.3s ease;
     }
 
+    .card:hover h3 {
+      color: white; /* Also change h3 color on card hover */
+    }
+
+    /* Icon color for h3 titles */
     .card h3 i {
       color: var(--dark-green);
+      transition: color 0.3s ease;
+    }
+
+    .card:hover h3 i {
+      color: white;
+    }
+
+    /* Bullet icon color for project titles (same as h3 icon color) */
+    .card h3 .badge {
+      color: white;
+      background: var(--mint-dark);
     }
 
     .card ul {
       padding-left: 20px;
       margin: 0;
+      color: var(--dark-green);
+      transition: color 0.3s ease;
+    }
+
+    .card:hover ul {
+      color: white;
     }
 
     .project-list {
@@ -156,6 +180,11 @@
       text-decoration: underline;
       font-weight: 600;
       transition: color 0.3s ease;
+    }
+
+    /* Hover color for project links in light mode */
+    .card:hover .project-list a {
+      color: white;
     }
 
     .project-list a:hover {
@@ -232,7 +261,7 @@
       font-size: 26px;
       color: var(--mint-green);
       box-shadow: 0 6px 20px rgba(26, 36, 33, 0.6);
-      transition: all 0.2s ease;
+      transition: all 0.3s ease;
       text-decoration: none;
     }
 
@@ -241,7 +270,7 @@
       box-shadow: 0 12px 36px rgba(47, 67, 63, 0.8);
     }
 
-    /* Dark Mode Button styling (matches your screenshot) */
+    /* Dark Mode Button styling */
     #darkToggle {
       cursor: pointer;
       display: inline-flex;
@@ -310,7 +339,7 @@
       box-shadow: 0 4px 12px rgba(143, 201, 155, 0.3);
     }
 
-    /* UPDATED: Dark Mode Hover */
+    /* Dark Mode Hover */
     body.dark-mode .card:hover {
       background: var(--mint-green); /* mint green background */
       color: black;                  /* black text for readability */
@@ -318,7 +347,21 @@
       cursor: pointer;
     }
 
-    /* Links color in dark mode */
+    /* Dark Mode: Make h3 titles white */
+    body.dark-mode .card h3 {
+      color: white;
+    }
+    /* Also h3 icon white */
+    body.dark-mode .card h3 i {
+      color: white;
+    }
+    /* badges on h3 remain same or can be white text */
+    body.dark-mode .card h3 .badge {
+      background: var(--mint-dark);
+      color: white;
+    }
+
+    /* Dark Mode: Project list links */
     body.dark-mode .project-list a,
     body.dark-mode .evidence a {
       color: #fff;
@@ -365,9 +408,9 @@
       box-shadow: 0 12px 36px rgba(143, 201, 155, 0.9);
     }
 
-    /* Toggle button in dark mode - keep consistent */
+    /* Toggle button in dark mode */
     body.dark-mode #darkToggle {
-      background: #2d6237; /* same dark green */
+      background: #2d6237;
       color: white;
       box-shadow: 0 6px 16px rgba(45, 98, 55, 0.6);
     }
@@ -492,29 +535,15 @@
           <h3>
             <i class="fa-solid fa-chart-simple"></i>
             DataCamp
+            <span class="badge">Ongoing</span>
           </h3>
           <ul>
-            <li>SQL for Data Analysis</li>
-            <li>Data Modeling & Analytics fundamentals</li>
-            <li>Python & AI concepts for analytics work</li>
+            <li>Introduction to AI for Work</li>
+            <li>Python for Data Analysis Basics</li>
+            <li>SQL Fundamentals</li>
           </ul>
           <p class="evidence">
-            Hands-on exercises reinforcing analytical thinking and data foundations
-          </p>
-        </div>
-
-        <div class="card">
-          <h3>
-            <i class="fa-solid fa-video"></i>
-            Udemy
-          </h3>
-          <ul>
-            <li>SAP BW / HANA deep dives</li>
-            <li>Analytics, reporting & visualization concepts</li>
-            <li>Supplementary technical upskilling</li>
-          </ul>
-          <p class="evidence">
-            Practical, topic-focused learning to complement SAP projects
+            <a href="#" target="_blank">Certificate of Completion</a>
           </p>
         </div>
 
@@ -525,18 +554,6 @@
       <h2>Skills</h2>
 
       <div class="skills-grid">
-
-        <div class="card">
-          <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
-          <ul>
-            <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
-            <li>Extraction (SAP S/4HANA, SAP ECC)</li>
-            <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
-            <li>Data validation & reconciliation</li>
-            <li>Planning and simulation</li>
-          </ul>
-        </div>
-
         <div class="card">
           <h3><i class="fa-solid fa-database"></i> Data Platforms & Tools</h3>
           <ul>
@@ -558,7 +575,6 @@
             <li>Configuration of SAP PaPM models</li>
           </ul>
         </div>
-
       </div>
     </section>
   </main>
@@ -588,6 +604,5 @@
         : '<i class="fa-solid fa-moon"></i> Dark Mode';
     });
   </script>
-
 </body>
 </html>
